--- a/src/App.css
+++ b/src/App.css
@@ -3,40 +3,59 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+    
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0;
+  text-align: center;
+  background-color: white;
+  color: black;
+  display: flex;
+  place-items: center;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 2.75rem;
+  margin-bottom: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.color-selected {
+  padding: 20px;
+  width: 200px;
+  height: 200px;
+  border-style: solid;
+  border-width: 4px;
+  border-color: rgb(159, 159, 159);
+  border-radius: 15px;
+  margin-bottom: 1.5rem;
+  justify-content: center;
+  align-content: center;
 }
 
-.card {
-  padding: 2em;
+h2 {
+  font-weight: lighter;
+  color: rgb(30, 30, 30);
+  font-size: 27px;
 }
 
-.read-the-docs {
-  color: #888;
+label {
+  font-size: 24px;
+  font-weight: bold;
+  
+}
+
+input[type="color"] {
+  
+  border-radius: 5px;;
+  border-width: 1px;
+  border-color: rgb(186, 183, 183);
+  margin-top: 10px;
+  width: 55px;
+  height: 35px;
 }
